--- a/Bootstrap-cdn/index.html
+++ b/Bootstrap-cdn/index.html
@@ -205,7 +205,31 @@
 </main>
 <!--                                   FOOTER -->
 
-<footer class="footer mt-auto py-4 bg-dark">
+<footer class="footer mt-auto pb-4 bg-dark">
+  <div class="footer-sm" style="background-color: rgb(61, 63, 63);">
+    <div class="container">
+    <div class="row my-2 text-center text-white">
+      <div class="col-lg-5 col-md-6 my-2 d-none d-md-block">
+        <p class="fst-italic m-0 align-middle"> Ne gasiti si pe pe social media</p>
+      </div>
+
+      <div class="col-lg-7 col-md-6 fs-5 m-auto">
+        <a href="#" class="text-decoration-none">
+          <i class="bi bi-facebook"></i>
+        </a>
+        <a href="#" class="text-decoration-none">
+          <i class="bi bi-instagram mx-1"></i>
+        </a>
+        <a href="#" class="text-decoration-none">
+          <i class="bi bi-github mx-1"></i>
+        </a>
+        <a href="#" class="text-decoration-none">
+          <i class="bi bi-linkedin mx-1"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+  </div>
   <div class="container">
     <div class="row">
 <div class="col-md-3 col-lg-4 pt-2 d-md-block d-sm-block d-lg-flex ">
@@ -257,30 +281,6 @@
 </div>
  </div>
 
-  </div>
-  <div class="footer-sm" style="background-color: rgb(61, 63, 63);">
-    <div class="container">
-    <div class="row my-2 text-center text-white">
-      <div class="col-lg-5 col-md-6 mt-2">
-        <p class="fst-italic"> Ne gasiti si pe pe social media</p>
-      </div>
-
-      <div class="col-lg-7 col-md-6 fs-5">
-        <a href="#" class="text-decoration-none">
-          <i class="bi bi-facebook"></i>
-        </a>
-        <a href="#" class="text-decoration-none">
-          <i class="bi bi-instagram mx-1"></i>
-        </a>
-        <a href="#" class="text-decoration-none">
-          <i class="bi bi-github mx-1"></i>
-        </a>
-        <a href="#" class="text-decoration-none">
-          <i class="bi bi-linkedin mx-1"></i>
-        </a>
-      </div>
-    </div>
-  </div>
   </div>
   <div class="footer-bottom my-4">
     <div class="container">
