Add contact and products page

--- a/soap-app/index.html
+++ b/soap-app/index.html
@@ -30,10 +30,10 @@
    
 </head>
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="./img/Free_Sample_By_Wix.jpeg" alt="logo" width="55" height="55" class="mx-auto d-block rounded-circle">
+      <a class="navbar-brand" href="index.html">
+        <img src="./img/Free_Sample_By_Wix.jpeg" alt="logo" width="55" height="55" class="float-start mx-auto d-block rounded-circle">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,13 +42,13 @@
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item ">
           <li class="nav-item ">
-            <a class="nav-link active" aria-current="page" href="#">Acasa</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Acasa</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Produse</a>
+            <a class="nav-link" href="produse.html">Produse</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacte</a>
+            <a class="nav-link" href="contacte.html">Contacte</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -85,7 +85,7 @@
         <div class="container">
           <div class="carousel-caption text-black my-4">
             <h1>Istoria aparitiei sapunului</p>
-            <p><a class="btn btn-lg btn-outline-dark" href="#">Afla mai mult</a></p>
+            <p><a class="btn btn-lg btn-outline-dark" href="acasa.html">Afla mai mult</a></p>
           </div>
         </div>
       </div>
@@ -120,7 +120,8 @@
 
         <h2 class="mt-4">Plantele medicinale</h2>
         <p>Colectarea plantelor medicinale utilizate in obtinerea de uleiuri esentiale, macerate, infuzii, este un proces foarte relaxanr, dar totodata care are multe secrete.</p>
-        <p><a class="btn btn-info" href="#">Vezi detalii &raquo;</a></p>
+        <p><a class="btn btn-info" href="a">Ve
+          zi detalii &raquo;</a></p>
       </div>
       <div class="col-lg-4">
         <img src="./img/273694360_710339949951340_6841327899855684334_n.jpg" class="rounded-circle d-block w-100" alt="...">
@@ -242,7 +243,7 @@
     </svg>
   </div>
   <div class="ms-1 contact-info">
-    <a class="info-title text-white fw-bold text-uppercase text-decoration-none" href="#">+ 0724871231</a>
+    <a class="info-title text-white fw-bold text-uppercase text-decoration-none" href="contacte.html">+ 0724871231</a>
     <p class="sutitle text-muted">Lu-Vi/9-18</p>
   </div>
 
@@ -256,7 +257,7 @@
     </svg>
   </div>
   <div class="ms-1 contact-info">
-    <a class="info-title text-white fw-bold text-decoration-none" href="#">mihaelacepraga@gmail.com</a>
+    <a class="info-title text-white fw-bold text-decoration-none" href="contacte.html">mihaelacepraga@gmail.com</a>
     <p class="subtitle text-muted">Suport online</p>
   </div>
  
@@ -284,14 +285,14 @@
   </div>
   <div class="footer-bottom my-4">
     <div class="container">
-     <div class="row text-white text-center">
+     <div class="row text-white py-2">
        <div class="col">
-        <p class="fs-6 text-light">
-          &copy; 2022 BioSoap 
-          &middot;&middot;
-          <a href="#" class="text-decoration-none">Drepturi de autor</a> &middot;&middot;
-           <a href="#" class="text-decoration-none">Termeni si conditii</a>
+        <p class="fs-6 text-light text-uppercase">
+          &copy; BioSoap 2022  
           </p> 
+          <p>  <small class="text-muted">Drepturi de autor </small></p>
+          <p>  <small class="text-muted">Termeni si conditii</small></p>
+           
         </div>
          <div class="col"> <p class="float-end"><a href="#">
            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-up" width="52" height="52" viewBox="0 0 24 24" stroke-width="2.5" stroke="#7bc62d" fill="none" stroke-linecap="round" stroke-linejoin="round">
