Add page Termeni

--- a/soap-app/index.html
+++ b/soap-app/index.html
@@ -110,7 +110,7 @@
 
         <div class="container">
           <div class="carousel-caption text-center text-black">
-            <h1>Metoda de producere</h1>
+            <h1 class="mb-4">Metoda de producere</h1>
             <p><em>
               Un săpun natural "adevarat", nu ar putea exista fără soda caustică(NaOH), care interactionând cu careva grăsimi vegetale(ulei de masline, cocos, mango, recin si multe altele) sau animale(eu nu folosesc grasimi animale), formează sapunul propriu-zis și glicerina!!!
               Procesul e lung , dar rezultatele sunt pe masura așteptărilor! 
@@ -158,11 +158,11 @@
     </div>
   </div>
 
-    <div class="container marketing my-4">
-      <div class="row px-5 p-md-5 mb-4 rounded bg-info bg-opacity-50">
+    <div class="container marketing my-4" style="background-color: rgb(189, 231, 191);">
+      <div class="row px-5 p-md-5 mb-4 ">
         
-        <div class="col-md-6 px-2 text-black text-center d-grid gap-2 d-md-block">
-          <h1 class="display-2 fst-bold text-center pt-5">Cum a luat nastere BioSoap? </h1>
+        <div class="col-md-6 px-2 text-black d-grid gap-2 d-md-block">
+          <h1 class="display-5 fst-bold text-center p-5">Cum a luat nastere BioSoap? </h1>
           <p>Buna, sunt Mihaela si va invit sa aflati istoria sapunurilor mele. In primul rand,vreau sa specific ca sunt tehnolog de produse cosmetice si medicinale cu acte in regula.
             In anul 2011 am finisat Universitatea de Stat din R.Moldova, Facultatea Chimie si Tehnologie Chimica, specialitatea "Tehnologia produselor cosmetice și medicinale".
           Pasiunea mea pentru sapunuri s-a dezvoltat in ani, odat cu aparitia copiilor si necesitatea de produse nonalergice, fara multe adausuri daunatoare.Asa a aparut si idea sa incer ceea ce am invatat in Universitate.Rezultatele ma bucura, atat pe mine cit si pe cei care au testat produsele noastre.</p>
@@ -176,9 +176,9 @@
 
 <div class="container my-4">
   <div class="row p-5 text-center">
-    <h1 class="display-1 fw-bold text-uppercase">Intrebari fregvente</h1>
+    <h1 class="display-5 text-uppercase">Intrebari fregvente</h1>
     <hr>
-    <p class="lead">Ce-si doresc clientii sa afle</p>
+    <p class="lead">Ce doresc clientii sa afle</p>
   </div>
   <!-- acordeon -->
   <div class="row p-2">
@@ -310,7 +310,8 @@
           &copy; BioSoap 2022  
           </p> 
           <p>  <small class="text-muted">Drepturi de autor </small></p>
-          <p>  <small class="text-muted">Termeni si conditii</small></p>
+ 
+          <p>  <small> <a class="termeni" href="termeni.html">Termeni si conditii</a></small></p>
            
         </div>
          <div class="col"> <p class="float-end"><a href="#">
